--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@500;700&display=swap');
+
 @tailwind base;
 
 @tailwind components;
@@ -14,7 +16,8 @@
 
 body {
     background-color: #f7f7f7;
-    font-family: Arial, sans-serif;
+    font-family: theme('fontFamily.sans');
+    font-weight: 500;
 }
 
 .container {
